# You must change these to your own details.
[package]
name = "color_picker"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["Evgeny Zhivitsa <evgeny.zhivitsa@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"
license = "MIT"
repository = "https://github.com/ezhivitsa/color-picker"

[lib]
crate-type = ["rlib", "cdylib"]
path = "src/wasm/lib.rs"

[dependencies]
yew = { version = "0.16.2", features = ["web_sys"] }
serde = "1.0.111"
regex = "1.3.9"
lazy_static = "1.4.0"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
gloo = "0.2.1"

# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.63"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3.40"
features = [
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlElement",
  "DomRect"
]

[profile.release]
# less code to include into binary
panic = 'abort' 
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggresive )
opt-level = 'z' 
# optimization for size 
# opt-level = 's' 
# link time optimization using using whole-program analysis
lto = true
